Fixed errors in BuildWorker involving Gradle Import